fixed spacing in navbar

--- a/blog.css
+++ b/blog.css
@@ -48,7 +48,8 @@ nav {
 }
 
 .nav-left a,
-.nav-right a {
+.nav-right a,
+.nav-left label{
   margin-right: 1rem;
   text-decoration: none;
   color: white;
