--- a/style.css
+++ b/style.css
@@ -49,7 +49,8 @@ nav {
 }
 
 .nav-left a,
-.nav-right a {
+.nav-right a,
+.nav-left label{
   margin-right: 1rem;
   text-decoration: none;
   color: white;
