--- a/template/style.css
+++ b/template/style.css
@@ -39,7 +39,8 @@ nav {
 }
 
 .nav-left a,
-.nav-right a {
+.nav-right a,
+.nav-left label {
   margin-right: 1rem;
   text-decoration: none;
   color: white;
